count API and documentation
